# cffi-cpython-bug

./: .gitignore  Makefile  README.md  pyproject.toml
bindings/python/foo/: __init__.py
src/: foo.c  foo.h
